Added maps display

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="initial-scale=1">
     <title>Sail Instruments</title>
 <style>
-
+#map {
+        width: 400px;
+        height: 400px;
+      }
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -22,6 +25,7 @@ body.loading {
 .cs_normal .loader, .cs_invert .loader, .cs_night .loader {
   display: none;
 }
+
 
 </style>
   </head>
