Switched to OSMap to avoid the network overhead of Google Maps and to get better charts

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,11 @@
 #map {
         width: 800px;
         height: 400px;
-      }
+}
+.map {
+        width: 800px;
+        height: 400px;
+}
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
